--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "npm run load:gcpStorage && vite",
+    "build": "npm run load:gcpStorage && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "load:gcpStorage": "node ./src/scripts/writeAssetsManifest.mjs"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
