images with animations

--- a/src/data/assets-manifest.json
+++ b/src/data/assets-manifest.json
@@ -12,6 +12,7 @@
     "linkedin.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/linkedin.svg",
     "press.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/press.svg",
     "react.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/react.svg",
+    "reciepe-it-scene.png": "https://storage.googleapis.com/liron-protfolio-assets/general/reciepe-it-scene.png",
     "rotate-tablet.png": "https://storage.googleapis.com/liron-protfolio-assets/general/rotate-tablet.png",
     "spark1.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/spark1.svg",
     "spark2.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/spark2.svg",
