--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "use-long-press": "^3.2.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
