--- a/src/data/assets-manifest.json
+++ b/src/data/assets-manifest.json
@@ -4,13 +4,51 @@
     "2.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/2.svg",
     "3.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/3.svg",
     "about.png": "https://storage.googleapis.com/liron-protfolio-assets/general/about.png",
+    "architecture-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/architecture-babysitter.png",
+    "architecture-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/architecture-recipe-it.png",
     "babysitter-scene.png": "https://storage.googleapis.com/liron-protfolio-assets/general/babysitter-scene.png",
     "bubble1.png": "https://storage.googleapis.com/liron-protfolio-assets/general/bubble1.png",
     "bubble2.png": "https://storage.googleapis.com/liron-protfolio-assets/general/bubble2.png",
     "bubble3.png": "https://storage.googleapis.com/liron-protfolio-assets/general/bubble3.png",
+    "call-dismiss.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/call-dismiss.svg",
+    "celebrate.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/celebrate.svg",
+    "close.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/close.svg",
+    "dark-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/dark-mode-recipe-it.png",
+    "design-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/design-babysitter.png",
+    "emoji.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/emoji.svg",
     "gmail.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/gmail.svg",
     "humburger.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/humburger.svg",
+    "light-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/light-mode-recipe-it.png",
     "linkedin.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/linkedin.svg",
+    "location.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/location.svg",
+    "low/": "https://storage.googleapis.com/liron-protfolio-assets/general/low/",
+    "low/architecture-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/architecture-babysitter.png",
+    "low/architecture-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/architecture-recipe-it.png",
+    "low/dark-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/dark-mode-recipe-it.png",
+    "low/design-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/design-babysitter.png",
+    "low/light-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/light-mode-recipe-it.png",
+    "low/more-project-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/more-project-babysitter.png",
+    "low/more-project-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/more-project-recipe-it.png",
+    "low/more-project-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/more-project-teperberg.png",
+    "low/persona-elizabeth.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/persona-elizabeth.png",
+    "low/persona-noa.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/persona-noa.png",
+    "low/persona-tami.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/persona-tami.png",
+    "low/persona-tomer.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/persona-tomer.png",
+    "low/style-guide-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/style-guide-babysitter.png",
+    "low/style-guide-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/style-guide-recipe-it.png",
+    "low/style-guide-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/style-guide-teperberg.png",
+    "low/user-flow-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/user-flow-babysitter.png",
+    "low/user-flow-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/user-flow-recipe-it.png",
+    "low/wireframe-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/wireframe-babysitter.png",
+    "low/wireframe-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/wireframe-recipe-it.png",
+    "magnifying.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/magnifying.svg",
+    "more-project-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/more-project-babysitter.png",
+    "more-project-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/more-project-recipe-it.png",
+    "more-project-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/more-project-teperberg.png",
+    "persona-elizabeth.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-elizabeth.png",
+    "persona-noa.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-noa.png",
+    "persona-tami.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-tami.png",
+    "persona-tomer.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-tomer.png",
     "press.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/press.svg",
     "react.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/react.svg",
     "reciepe-it-scene.png": "https://storage.googleapis.com/liron-protfolio-assets/general/reciepe-it-scene.png",
@@ -19,6 +57,15 @@
     "spark2.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/spark2.svg",
     "spark3.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/spark3.svg",
     "star.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/star.svg",
-    "teperberg-scene.png": "https://storage.googleapis.com/liron-protfolio-assets/general/teperberg-scene.png"
+    "style-guide-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/style-guide-babysitter.png",
+    "style-guide-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/style-guide-recipe-it.png",
+    "style-guide-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/style-guide-teperberg.png",
+    "teperberg-scene.png": "https://storage.googleapis.com/liron-protfolio-assets/general/teperberg-scene.png",
+    "user-flow-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/user-flow-babysitter.png",
+    "user-flow-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/user-flow-recipe-it.png",
+    "verified.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/verified.svg",
+    "web-design-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/web-design-teperberg.png",
+    "wireframe-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/wireframe-babysitter.png",
+    "wireframe-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/wireframe-recipe-it.png"
   }
 }
