--- a/src/data/assets-manifest.json
+++ b/src/data/assets-manifest.json
@@ -3,9 +3,11 @@
     "1.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/1.svg",
     "2.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/2.svg",
     "3.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/3.svg",
+    "CV.png": "https://storage.googleapis.com/liron-protfolio-assets/general/CV.png",
     "about.png": "https://storage.googleapis.com/liron-protfolio-assets/general/about.png",
     "architecture-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/architecture-babysitter.png",
     "architecture-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/architecture-recipe-it.png",
+    "arrow-down.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/arrow-down.svg",
     "babysitter-scene.png": "https://storage.googleapis.com/liron-protfolio-assets/general/babysitter-scene.png",
     "bubble1.png": "https://storage.googleapis.com/liron-protfolio-assets/general/bubble1.png",
     "bubble2.png": "https://storage.googleapis.com/liron-protfolio-assets/general/bubble2.png",
@@ -15,18 +17,28 @@
     "close.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/close.svg",
     "dark-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/dark-mode-recipe-it.png",
     "design-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/design-babysitter.png",
+    "desktop-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/desktop-teperberg.png",
+    "download.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/download.svg",
     "emoji.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/emoji.svg",
     "gmail.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/gmail.svg",
     "humburger.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/humburger.svg",
+    "iphone.png": "https://storage.googleapis.com/liron-protfolio-assets/general/iphone.png",
     "light-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/light-mode-recipe-it.png",
     "linkedin.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/linkedin.svg",
+    "liron-gez-cv.pdf": "https://storage.googleapis.com/liron-protfolio-assets/general/liron-gez-cv.pdf",
     "location.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/location.svg",
     "low/": "https://storage.googleapis.com/liron-protfolio-assets/general/low/",
+    "low/CV.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/CV.png",
+    "low/about.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/about.png",
     "low/architecture-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/architecture-babysitter.png",
     "low/architecture-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/architecture-recipe-it.png",
     "low/dark-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/dark-mode-recipe-it.png",
     "low/design-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/design-babysitter.png",
+    "low/desktop-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/desktop-teperberg.png",
+    "low/iphone.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/iphone.png",
     "low/light-mode-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/light-mode-recipe-it.png",
+    "low/macbook.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/macbook.png",
+    "low/mobile-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/mobile-teperberg.png",
     "low/more-project-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/more-project-babysitter.png",
     "low/more-project-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/more-project-recipe-it.png",
     "low/more-project-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/more-project-teperberg.png",
@@ -41,10 +53,13 @@
     "low/user-flow-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/user-flow-recipe-it.png",
     "low/wireframe-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/wireframe-babysitter.png",
     "low/wireframe-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/low/wireframe-recipe-it.png",
+    "macbook.png": "https://storage.googleapis.com/liron-protfolio-assets/general/macbook.png",
     "magnifying.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/magnifying.svg",
+    "mobile-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/mobile-teperberg.png",
     "more-project-babysitter.png": "https://storage.googleapis.com/liron-protfolio-assets/general/more-project-babysitter.png",
     "more-project-recipe-it.png": "https://storage.googleapis.com/liron-protfolio-assets/general/more-project-recipe-it.png",
     "more-project-teperberg.png": "https://storage.googleapis.com/liron-protfolio-assets/general/more-project-teperberg.png",
+    "open.svg": "https://storage.googleapis.com/liron-protfolio-assets/general/open.svg",
     "persona-elizabeth.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-elizabeth.png",
     "persona-noa.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-noa.png",
     "persona-tami.png": "https://storage.googleapis.com/liron-protfolio-assets/general/persona-tami.png",
