--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "load:gcpStorage": "node ./src/scripts/writeAssetsManifest.mjs"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
