--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "load:gcpStorage": "node ./src/scripts/writeAssetsManifest.mjs"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
